k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitbok
  namespace: gitbok
spec:
  ports:
  - name: main
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: gitbok
  type: ClusterIP
