k8s/ingress-hs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
  labels:
    k8slens-edit-resource-version: v1
    kustomize.toolkit.fluxcd.io/name: gitbok
    kustomize.toolkit.fluxcd.io/namespace: flux-system
  name: gitbok-lb
  namespace: gitbok
spec:
  ingressClassName: nginx
  rules:
  - host: www.healthdevhub.com
    http:
      paths:
      - backend:
          service:
            name: gitbok
            port:
              number: 80
        path: /docs
        pathType: ImplementationSpecific
  - host: healthdevhub.com
    http:
      paths:
      - backend:
          service:
            name: gitbok
            port:
              number: 80
        path: /docs
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - www.healthdevhub.com
    - healthdevhub.com
    secretName: ingress-gitbok-lb-tls
status:
  loadBalancer:
    ingress:
    - ip: 34.74.5.253
