k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
  name: gitbok
  namespace: gitbok
spec:
  ingressClassName: nginx
  rules:
  - host: www.healthdevhub.com
    http:
      paths:
      - backend:
          service:
            name: gitbok
            port:
              number: 80
        path: /docs
        pathType: ImplementationSpecific
  - host: www.health-samurai.io
    http:
      paths:
      - backend:
          service:
            name: gitbok
            port:
              number: 80
        path: /docs
        pathType: ImplementationSpecific
